# EogenVirtualMachine

./: Buffer.c  CMakeCache.txt  CMakeLists.txt  Dictionary.h  Driver.c  EogenDriver.cpp  EogenRuntime.cpp  EogenRuntime.hpp  EogenVirtualMachine  EogenVirtualMachine.cbp  Makefile  Models.h  Models.hpp  README.md  Rider.c  Stack.h  cmake_install.cmake
api/: SysCallHandler.cpp  SysCallHandler.h  SysCallHandler.hpp  Time.cpp
include/mpir-3.0.0/: Makefile  config.h  config.status  gmp.h  libgmp.la  libmpir.la  libtool
include/mpir-3.0.0/.libs/: libgmp.so.23.0.3  libmpir.so.23.0.3
include/mpir-3.0.0/cxx/: Makefile
include/mpir-3.0.0/doc/: Makefile
include/mpir-3.0.0/fft/: Makefile
include/mpir-3.0.0/mpf/: Makefile
include/mpir-3.0.0/mpn/: Makefile
include/mpir-3.0.0/mpq/: Makefile
include/mpir-3.0.0/mpz/: Makefile
include/mpir-3.0.0/printf/: Makefile
include/mpir-3.0.0/scanf/: Makefile
include/mpir-3.0.0/tests/: Makefile  libtests.la  refmpf.lo  refmpn.lo  refmpq.lo  refmpz.lo  spinner.lo  t-bswap  t-constants  t-count_zeros  t-gmpmax  t-hightomask  t-modlinv  t-parity  t-popc  t-sub  trace.lo  x86_64call.lo  x86_64check.lo
include/mpir-3.0.0/tests/.libs/: t-bswap  t-constants  t-count_zeros  t-gmpmax  t-hightomask  t-modlinv  t-parity  t-popc  t-sub
include/mpir-3.0.0/tests/cxx/: Makefile
include/mpir-3.0.0/tests/devel/: Makefile
include/mpir-3.0.0/tests/fft/: Makefile  t-adjust  t-adjust_sqrt2  t-butterfly  t-butterfly_lshB  t-butterfly_rshB  t-butterfly_sqrt2  t-butterfly_twiddle  t-div_2expmod_2expp1  t-fft_ifft_mfa_trunc_sqrt2  t-fft_ifft_negacyclic  t-fft_ifft_radix2  t-fft_ifft_trunc  t-fft_ifft_trunc_sqrt2  t-mul_2expmod_2expp1  t-mul_fft_main  t-mul_mfa_trunc_sqrt2  t-mul_trunc_sqrt2  t-mulmod_2expp1  t-normmod_2expp1  t-split_combine_bits
include/mpir-3.0.0/tests/misc/: Makefile  t-locale  t-printf  t-scanf
include/mpir-3.0.0/tests/mpf/: Makefile  t-add  t-cmp_d  t-cmp_si  t-conv  t-div  t-dm2exp  t-eq  t-get_si  t-get_ui  t-gsprec  t-inp_str  t-int_p  t-mul_ui  t-muldiv  t-set  t-set_q  t-set_si  t-set_ui  t-sqrt  t-sqrt_ui  t-sub  t-trunc  t-ui_div
include/mpir-3.0.0/tests/mpn/: Makefile  st_fat  t-addadd_n  t-addsub_n  t-aors_1  t-asmtype  t-dc_bdiv_q  t-dc_bdiv_q_n  t-dc_bdiv_qr  t-dc_bdiv_qr_n  t-dc_div_q  t-dc_div_qr  t-dc_div_qr_n  t-dc_divappr_q  t-divebyff  t-divebyfobm1  t-divrem_1  t-fat  t-gcdext  t-hgcd  t-instrument  t-inv_div_q  t-inv_div_qr  t-inv_div_qr_n  t-inv_divappr_q  t-inv_divappr_q_n  t-invert  t-iord_u  t-lorrshift1  t-matrix22  t-mp_bases  t-mullow_basecase  t-mullowhigh  t-mulmid  t-mulmod_2expm1  t-neg  t-perfsqr  t-redc_1  t-sb_bdiv_q  t-sb_bdiv_qr  (+7 more)
include/mpir-3.0.0/tests/mpq/: Makefile  t-aors  t-cmp  t-cmp_ui  t-cmp_z  t-equal  t-get_d  t-get_str  t-inp_str  t-md_2exp  t-set_f
include/mpir-3.0.0/tests/mpz/: Makefile  bit  convert  dive  dive_ui  io  logic  reuse  st_hamdist  st_popcount  t-addsub  t-aorsmul  t-bin  (+52 more)
include/mpir-3.0.0/tune/: Makefile
v2/: EogenRuntime.cpp  EogenRuntime.hpp  Models.hpp  Rider.cpp  Rider.h
v2/api/: IO.cpp  IO.hpp  SysCallHandler.cpp  Time.h
v3/: Dictionary.c  Dictionary.h  List.h  Models.h  Rider.c  Rider.h  Stack.h  main.c
v3/api/: ApiRouter.h
v3/api/IO/: ConsolePrinter.h
(+192 files in other folders)
